TALM/Couillard/testes/supers/parser.out
shift/reduce conflict in state 23 resolved as shift.
shift/reduce conflict in state 42 resolved as shift.
shift/reduce conflict in state 101 resolved as shift.
shift/reduce conflict in state 101 resolved as shift.
shift/reduce conflict in state 101 resolved as shift.
shift/reduce conflict in state 101 resolved as shift.
shift/reduce conflict in state 101 resolved as shift.
shift/reduce conflict in state 101 resolved as shift.
shift/reduce conflict in state 101 resolved as shift.
shift/reduce conflict in state 101 resolved as shift.
shift/reduce conflict in state 101 resolved as shift.
shift/reduce conflict in state 101 resolved as shift.
shift/reduce conflict in state 101 resolved as shift.


Unused terminals:

   ENUM
   ARROW
   SIZEOF
   UNION
   GOTO
   QUESTION
   TIMES
   POUND
   STRUCT

Grammar

Rule 1     translation_unit -> external_declaration
Rule 2     translation_unit -> translation_unit external_declaration
Rule 3     external_declaration -> function_definition
Rule 4     external_declaration -> declaration
Rule 5     external_declaration -> block_statement
Rule 6     function_definition -> declaration_specifiers declarator compound_statement
Rule 7     function_definition -> declarator compound_statement
Rule 8     declaration_specifiers -> storage_class_specifier
Rule 9     declaration_specifiers -> storage_class_specifier declaration_specifiers
Rule 10    declaration_specifiers -> type_specifier
Rule 11    declaration_specifiers -> type_specifier declaration_specifiers
Rule 12    declaration_specifiers -> type_qualifier
Rule 13    declaration_specifiers -> type_qualifier declaration_specifiers
Rule 14    type_specifier -> VOID
Rule 15    type_specifier -> CHAR
Rule 16    type_specifier -> INT
Rule 17    type_specifier -> FLOAT
Rule 18    type_specifier -> DOUBLE
Rule 19    type_specifier -> SHORT
Rule 20    type_specifier -> LONG
Rule 21    type_specifier -> SIGNED
Rule 22    type_specifier -> UNSIGNED
Rule 23    storage_class_specifier -> TYPEDEF
Rule 24    storage_class_specifier -> EXTERN
Rule 25    storage_class_specifier -> STATIC
Rule 26    storage_class_specifier -> AUTO
Rule 27    storage_class_specifier -> REGISTER
Rule 28    storage_class_specifier -> TREB_PAROUT
Rule 29    type_qualifier -> CONST
Rule 30    type_qualifier -> VOLATILE
Rule 31    type_qualifier_list -> type_qualifier
Rule 32    type_qualifier_list -> type_qualifier_list type_qualifier
Rule 33    declarator -> direct_declarator
Rule 34    declarator -> pointer declarator
Rule 35    pointer -> ASTERISK
Rule 36    pointer -> ASTERISK type_qualifier_list
Rule 37    pointer -> ASTERISK pointer
Rule 38    pointer -> ASTERISK type_qualifier_list pointer
Rule 39    declaration_list -> declaration
Rule 40    declaration_list -> declaration_list declaration
Rule 41    declaration -> declaration_specifiers SEMICOLON
Rule 42    declaration -> declaration_specifiers init_declarator_list SEMICOLON
Rule 43    init_declarator_list -> init_declarator
Rule 44    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 45    init_declarator -> declarator
Rule 46    init_declarator -> declarator ASSIGN initializer
Rule 47    initializer -> assignment_expression
Rule 48    initializer -> LBRACE initializer_list RBRACE
Rule 49    initializer -> LBRACE initializer_list COMMA RBRACE
Rule 50    initializer_list -> initializer
Rule 51    initializer_list -> initializer_list COMMA initializer
Rule 52    compound_statement -> LBRACE RBRACE
Rule 53    compound_statement -> LBRACE statement_list RBRACE
Rule 54    compound_statement -> LBRACE declaration_list RBRACE
Rule 55    compound_statement -> LBRACE declaration_list statement_list RBRACE
Rule 56    statement_list -> statement
Rule 57    statement_list -> statement_list statement
Rule 58    statement -> labeled_statement
Rule 59    statement -> super_statement
Rule 60    statement -> compound_statement
Rule 61    statement -> expression_statement
Rule 62    statement -> selection_statement
Rule 63    statement -> iteration_statement
Rule 64    statement -> jump_statement
Rule 65    labeled_statement -> CASE constant_expression COLON statement
Rule 66    labeled_statement -> DEFAULT COLON statement
Rule 67    expression_statement -> SEMICOLON
Rule 68    expression_statement -> expression SEMICOLON
Rule 69    selection_statement -> IF LPAREN expression RPAREN statement
Rule 70    selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 71    selection_statement -> SWITCH LPAREN expression RPAREN statement
Rule 72    jump_statement -> RETURN SEMICOLON
Rule 73    jump_statement -> RETURN expression SEMICOLON
Rule 74    jump_statement -> BREAK SEMICOLON
Rule 75    jump_statement -> CONTINUE SEMICOLON
Rule 76    iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 77    iteration_statement -> FOR LPAREN expression_statement expression_statement expression RPAREN statement
Rule 78    iteration_statement -> FOR LPAREN expression_statement expression_statement RPAREN statement
Rule 79    iteration_statement -> DO statement WHILE LPAREN expression RPAREN SEMICOLON
Rule 80    expression -> assignment_expression
Rule 81    expression -> expression COMMA assignment_expression
Rule 82    assignment_expression -> conditional_expression
Rule 83    assignment_expression -> unary_expression ASSIGN assignment_expression
Rule 84    assignment_expression -> unary_expression EQ_PLUS assignment_expression
Rule 85    assignment_expression -> unary_expression EQ_MINUS assignment_expression
Rule 86    assignment_expression -> unary_expression EQ_TIMES assignment_expression
Rule 87    assignment_expression -> unary_expression EQ_DIV assignment_expression
Rule 88    assignment_expression -> unary_expression EQ_MODULO assignment_expression
Rule 89    assignment_expression -> unary_expression EQ_SHIFT_LEFT assignment_expression
Rule 90    assignment_expression -> unary_expression EQ_SHIFT_RIGHT assignment_expression
Rule 91    assignment_expression -> unary_expression EQ_AMPERSAND assignment_expression
Rule 92    assignment_expression -> unary_expression EQ_CARET assignment_expression
Rule 93    assignment_expression -> unary_expression EQ_PIPE assignment_expression
Rule 94    constant_expression -> conditional_expression
Rule 95    conditional_expression -> logical_or_expression
Rule 96    logical_or_expression -> logical_and_expression
Rule 97    logical_or_expression -> logical_or_expression DOUBLE_PIPE logical_and_expression
Rule 98    logical_and_expression -> inclusive_or_expression
Rule 99    logical_and_expression -> logical_and_expression DOUBLE_AMPERSAND inclusive_or_expression
Rule 100   inclusive_or_expression -> exclusive_or_expression
Rule 101   inclusive_or_expression -> inclusive_or_expression PIPE exclusive_or_expression
Rule 102   exclusive_or_expression -> and_expression
Rule 103   exclusive_or_expression -> exclusive_or_expression CARET and_expression
Rule 104   and_expression -> equality_expression
Rule 105   and_expression -> and_expression AMPERSAND equality_expression
Rule 106   equality_expression -> relational_expression
Rule 107   equality_expression -> equality_expression EQ relational_expression
Rule 108   equality_expression -> equality_expression NOT_EQ relational_expression
Rule 109   relational_expression -> shift_expression
Rule 110   relational_expression -> relational_expression LESS shift_expression
Rule 111   relational_expression -> relational_expression GREATER shift_expression
Rule 112   relational_expression -> relational_expression LESS_EQ shift_expression
Rule 113   relational_expression -> relational_expression GREATER_EQ shift_expression
Rule 114   shift_expression -> additive_expression
Rule 115   shift_expression -> shift_expression SHIFT_LEFT additive_expression
Rule 116   shift_expression -> shift_expression SHIFT_RIGHT additive_expression
Rule 117   additive_expression -> mult_expression
Rule 118   additive_expression -> additive_expression PLUS mult_expression
Rule 119   additive_expression -> additive_expression MINUS mult_expression
Rule 120   mult_expression -> cast_expression
Rule 121   mult_expression -> mult_expression ASTERISK cast_expression
Rule 122   mult_expression -> mult_expression DIV cast_expression
Rule 123   mult_expression -> mult_expression MODULO cast_expression
Rule 124   cast_expression -> unary_expression
Rule 125   unary_expression -> postfix_expression
Rule 126   unary_expression -> DOUBLE_PLUS unary_expression
Rule 127   unary_expression -> DOUBLE_MINUS unary_expression
Rule 128   unary_expression -> AMPERSAND cast_expression
Rule 129   unary_expression -> ASTERISK cast_expression
Rule 130   unary_expression -> PLUS cast_expression
Rule 131   unary_expression -> MINUS cast_expression
Rule 132   unary_expression -> TILDE cast_expression
Rule 133   unary_expression -> EXCLAMATION cast_expression
Rule 134   postfix_expression -> primary_expression
Rule 135   postfix_expression -> postfix_expression LPAREN argument_expression_list RPAREN
Rule 136   postfix_expression -> postfix_expression LPAREN RPAREN
Rule 137   postfix_expression -> postfix_expression LBRACKET expression RBRACKET
Rule 138   postfix_expression -> postfix_expression DOUBLE_PLUS
Rule 139   postfix_expression -> postfix_expression DOUBLE_MINUS
Rule 140   primary_expression -> ID
Rule 141   primary_expression -> INUMBER
Rule 142   primary_expression -> FNUMBER
Rule 143   primary_expression -> CHARACTER
Rule 144   primary_expression -> string_literal
Rule 145   primary_expression -> LPAREN expression RPAREN
Rule 146   string_literal -> STRING
Rule 147   string_literal -> string_literal STRING
Rule 148   direct_declarator -> ID
Rule 149   direct_declarator -> direct_declarator LPAREN parameter_type_list RPAREN
Rule 150   direct_declarator -> direct_declarator LPAREN RPAREN
Rule 151   direct_declarator -> LPAREN declarator RPAREN
Rule 152   direct_declarator -> direct_declarator LBRACKET constant_expression RBRACKET
Rule 153   direct_declarator -> direct_declarator LBRACKET RBRACKET
Rule 154   parameter_type_list -> parameter_list
Rule 155   parameter_type_list -> parameter_list COMMA ELLIPSIS
Rule 156   parameter_list -> parameter_declaration
Rule 157   parameter_list -> parameter_list COMMA parameter_declaration
Rule 158   parameter_declaration -> declaration_specifiers declarator
Rule 159   parameter_declaration -> declaration_specifiers
Rule 160   argument_expression_list -> assignment_expression
Rule 161   argument_expression_list -> argument_expression_list COMMA assignment_expression
Rule 162   super_statement -> TREB_SUPER SINGLE INPUT LPAREN super_input_list RPAREN OUTPUT LPAREN super_output_list RPAREN SUPERBODY
Rule 163   super_statement -> TREB_SUPER PARALLEL INPUT LPAREN super_input_list RPAREN OUTPUT LPAREN super_output_list RPAREN SUPERBODY
Rule 164   super_statement -> TREB_SUPER REDUCE INPUT LPAREN super_input_list RPAREN OUTPUT LPAREN super_output_list RPAREN SUPERBODY
Rule 165   super_output_list -> ID
Rule 166   super_output_list -> super_output_list COMMA ID
Rule 167   super_input_list -> parout_expression
Rule 168   super_input_list -> super_input_list COMMA parout_expression
Rule 169   parout_expression -> super_input_id COLON COLON INUMBER
Rule 170   parout_expression -> super_input_id COLON COLON ASTERISK
Rule 171   parout_expression -> super_input_id COLON COLON MYTID
Rule 172   parout_expression -> super_input_id
Rule 173   parout_expression -> super_input_id COLON COLON LPAREN MYTID mytid_op INUMBER RPAREN
Rule 174   parout_expression -> super_input_id COLON COLON LASTTID
Rule 175   mytid_op -> PLUS
Rule 176   mytid_op -> MINUS
Rule 177   super_input_id -> ID
Rule 178   super_input_id -> LOCAL DOT ID
Rule 179   super_input_id -> STARTER DOT ID
Rule 180   block_statement -> BLOCK

Terminals, with rules where they appear

AMPERSAND            : 105 128
ARROW                : 
ASSIGN               : 46 83
ASTERISK             : 35 36 37 38 121 129 170
AUTO                 : 26
BLOCK                : 180
BREAK                : 74
CARET                : 103
CASE                 : 65
CHAR                 : 15
CHARACTER            : 143
COLON                : 65 66 169 169 170 170 171 171 173 173 174 174
COMMA                : 44 49 51 81 155 157 161 166 168
CONST                : 29
CONTINUE             : 75
DEFAULT              : 66
DIV                  : 122
DO                   : 79
DOT                  : 178 179
DOUBLE               : 18
DOUBLE_AMPERSAND     : 99
DOUBLE_MINUS         : 127 139
DOUBLE_PIPE          : 97
DOUBLE_PLUS          : 126 138
ELLIPSIS             : 155
ELSE                 : 70
ENUM                 : 
EQ                   : 107
EQ_AMPERSAND         : 91
EQ_CARET             : 92
EQ_DIV               : 87
EQ_MINUS             : 85
EQ_MODULO            : 88
EQ_PIPE              : 93
EQ_PLUS              : 84
EQ_SHIFT_LEFT        : 89
EQ_SHIFT_RIGHT       : 90
EQ_TIMES             : 86
EXCLAMATION          : 133
EXTERN               : 24
FLOAT                : 17
FNUMBER              : 142
FOR                  : 77 78
GOTO                 : 
GREATER              : 111
GREATER_EQ           : 113
ID                   : 140 148 165 166 177 178 179
IF                   : 69 70
INPUT                : 162 163 164
INT                  : 16
INUMBER              : 141 169 173
LASTTID              : 174
LBRACE               : 48 49 52 53 54 55
LBRACKET             : 137 152 153
LESS                 : 110
LESS_EQ              : 112
LOCAL                : 178
LONG                 : 20
LPAREN               : 69 70 71 76 77 78 79 135 136 145 149 150 151 162 162 163 163 164 164 173
MINUS                : 119 131 176
MODULO               : 123
MYTID                : 171 173
NOT_EQ               : 108
OUTPUT               : 162 163 164
PARALLEL             : 163
PIPE                 : 101
PLUS                 : 118 130 175
POUND                : 
QUESTION             : 
RBRACE               : 48 49 52 53 54 55
RBRACKET             : 137 152 153
REDUCE               : 164
REGISTER             : 27
RETURN               : 72 73
RPAREN               : 69 70 71 76 77 78 79 135 136 145 149 150 151 162 162 163 163 164 164 173
SEMICOLON            : 41 42 67 68 72 73 74 75 79
SHIFT_LEFT           : 115
SHIFT_RIGHT          : 116
SHORT                : 19
SIGNED               : 21
SINGLE               : 162
SIZEOF               : 
STARTER              : 179
STATIC               : 25
STRING               : 146 147
STRUCT               : 
SUPERBODY            : 162 163 164
SWITCH               : 71
TILDE                : 132
TIMES                : 
TREB_PAROUT          : 28
TREB_SUPER           : 162 163 164
TYPEDEF              : 23
UNION                : 
UNSIGNED             : 22
VOID                 : 14
VOLATILE             : 30
WHILE                : 76 79
error                : 

Nonterminals, with rules where they appear

additive_expression  : 114 115 116 118 119
and_expression       : 102 103 105
argument_expression_list : 135 161
assignment_expression : 47 80 81 83 84 85 86 87 88 89 90 91 92 93 160 161
block_statement      : 5
cast_expression      : 120 121 122 123 128 129 130 131 132 133
compound_statement   : 6 7 60
conditional_expression : 82 94
constant_expression  : 65 152
declaration          : 4 39 40
declaration_list     : 40 54 55
declaration_specifiers : 6 9 11 13 41 42 158 159
declarator           : 6 7 34 45 46 151 158
direct_declarator    : 33 149 150 152 153
equality_expression  : 104 105 107 108
exclusive_or_expression : 100 101 103
expression           : 68 69 70 71 73 76 77 79 81 137 145
expression_statement : 61 77 77 78 78
external_declaration : 1 2
function_definition  : 3
inclusive_or_expression : 98 99 101
init_declarator      : 43 44
init_declarator_list : 42 44
initializer          : 46 50 51
initializer_list     : 48 49 51
iteration_statement  : 63
jump_statement       : 64
labeled_statement    : 58
logical_and_expression : 96 97 99
logical_or_expression : 95 97
mult_expression      : 117 118 119 121 122 123
mytid_op             : 173
parameter_declaration : 156 157
parameter_list       : 154 155 157
parameter_type_list  : 149
parout_expression    : 167 168
pointer              : 34 37 38
postfix_expression   : 125 135 136 137 138 139
primary_expression   : 134
relational_expression : 106 107 108 110 111 112 113
selection_statement  : 62
shift_expression     : 109 110 111 112 113 115 116
statement            : 56 57 65 66 69 70 70 71 76 77 78 79
statement_list       : 53 55 57
storage_class_specifier : 8 9
string_literal       : 144 147
super_input_id       : 169 170 171 172 173 174
super_input_list     : 162 163 164 168
super_output_list    : 162 163 164 166
super_statement      : 59
translation_unit     : 2 0
type_qualifier       : 12 13 31 32
type_qualifier_list  : 32 36 38
type_specifier       : 10 11
unary_expression     : 83 84 85 86 87 88 89 90 91 92 93 124 126 127


Parsing method: SLR


state 0

    (0) S' -> . translation_unit
    (1) translation_unit -> . external_declaration
    (2) translation_unit -> . translation_unit external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . declaration
    (5) external_declaration -> . block_statement
    (6) function_definition -> . declaration_specifiers declarator compound_statement
    (7) function_definition -> . declarator compound_statement
    (41) declaration -> . declaration_specifiers SEMICOLON
    (42) declaration -> . declaration_specifiers init_declarator_list SEMICOLON
    (180) block_statement -> . BLOCK
    (8) declaration_specifiers -> . storage_class_specifier
    (9) declaration_specifiers -> . storage_class_specifier declaration_specifiers
    (10) declaration_specifiers -> . type_specifier
    (11) declaration_specifiers -> . type_specifier declaration_specifiers
    (12) declaration_specifiers -> . type_qualifier
    (13) declaration_specifiers -> . type_qualifier declaration_specifiers
    (33) declarator -> . direct_declarator
    (34) declarator -> . pointer declarator
    (23) storage_class_specifier -> . TYPEDEF
    (24) storage_class_specifier -> . EXTERN
    (25) storage_class_specifier -> . STATIC
    (26) storage_class_specifier -> . AUTO
    (27) storage_class_specifier -> . REGISTER
    (28) storage_class_specifier -> . TREB_PAROUT
    (14) type_specifier -> . VOID
    (15) type_specifier -> . CHAR
    (16) type_specifier -> . INT
    (17) type_specifier -> . FLOAT
    (18) type_specifier -> . DOUBLE
    (19) type_specifier -> . SHORT
    (20) type_specifier -> . LONG
    (21) type_specifier -> . SIGNED
    (22) type_specifier -> . UNSIGNED
    (29) type_qualifier -> . CONST
    (30) type_qualifier -> . VOLATILE
    (148) direct_declarator -> . ID
    (149) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (150) direct_declarator -> . direct_declarator LPAREN RPAREN
    (151) direct_declarator -> . LPAREN declarator RPAREN
    (152) direct_declarator -> . direct_declarator LBRACKET constant_expression RBRACKET
    (153) direct_declarator -> . direct_declarator LBRACKET RBRACKET
    (35) pointer -> . ASTERISK
    (36) pointer -> . ASTERISK type_qualifier_list
    (37) pointer -> . ASTERISK pointer
    (38) pointer -> . ASTERISK type_qualifier_list pointer

    BLOCK           shift and go to state 13
    TYPEDEF         shift and go to state 20
    EXTERN          shift and go to state 11
    STATIC          shift and go to state 9
    AUTO            shift and go to state 21
    REGISTER        shift and go to state 16
    TREB_PAROUT     shift and go to state 2
    VOID            shift and go to state 6
    CHAR            shift and go to state 7
    INT             shift and go to state 28
    FLOAT           shift and go to state 3
    DOUBLE          shift and go to state 29
    SHORT           shift and go to state 8
    LONG            shift and go to state 10
    SIGNED          shift and go to state 31
    UNSIGNED        shift and go to state 17
    CONST           shift and go to state 4
    VOLATILE        shift and go to state 32
    ID              shift and go to state 26
    LPAREN          shift and go to state 5
    ASTERISK        shift and go to state 23

  ! ASTERISK        [ shift and go to state 23 ]
  ! ASTERISK        [ shift and go to state 23 ]
  ! ASTERISK        [ shift and go to state 23 ]

    external_declaration shift and go to state 14
    storage_class_specifier shift and go to state 1
    type_qualifier  shift and go to state 30
    function_definition shift and go to state 27
    direct_declarator shift and go to state 22
    declarator      shift and go to state 33
    block_statement shift and go to state 18
    type_specifier  shift and go to state 15
    declaration_specifiers shift and go to state 24
    declaration     shift and go to state 25
    pointer         shift and go to state 12
    translation_unit shift and go to state 19

state 1

    (8) declaration_specifiers -> storage_class_specifier .
    (9) declaration_specifiers -> storage_class_specifier . declaration_specifiers
    (8) declaration_specifiers -> . storage_class_specifier
    (9) declaration_specifiers -> . storage_class_specifier declaration_specifiers
    (10) declaration_specifiers -> . type_specifier
    (11) declaration_specifiers -> . type_specifier declaration_specifiers
    (12) declaration_specifiers -> . type_qualifier
    (13) declaration_specifiers -> . type_qualifier declaration_specifiers
    (23) storage_class_specifier -> . TYPEDEF
    (24) storage_class_specifier -> . EXTERN
    (25) storage_class_specifier -> . STATIC
    (26) storage_class_specifier -> . AUTO
    (27) storage_class_specifier -> . REGISTER
    (28) storage_class_specifier -> . TREB_PAROUT
    (14) type_specifier -> . VOID
    (15) type_specifier -> . CHAR
    (16) type_specifier -> . INT
    (17) type_specifier -> . FLOAT
    (18) type_specifier -> . DOUBLE
    (19) type_specifier -> . SHORT
    (20) type_specifier -> . LONG
    (21) type_specifier -> . SIGNED
    (22) type_specifier -> . UNSIGNED
    (29) type_qualifier -> . CONST
    (30) type_qualifier -> . VOLATILE

    ID              reduce using rule 8 (declaration_specifiers -> storage_class_specifier .)
    LPAREN          reduce using rule 8 (declaration_specifiers -> storage_class_specifier .)
    ASTERISK        reduce using rule 8 (declaration_specifiers -> storage_class_specifier .)
    SEMICOLON       reduce using rule 8 (declaration_specifiers -> storage_class_specifier .)
    RPAREN          reduce using rule 8 (declaration_specifiers -> storage_class_specifier .)
    COMMA           reduce using rule 8 (declaration_specifiers -> storage_class_specifier .)
    TYPEDEF         shift and go to state 20
    EXTERN          shift and go to state 11
    STATIC          shift and go to state 9
    AUTO            shift and go to state 21
    REGISTER        shift and go to state 16
    TREB_PAROUT     shift and go to state 2
    VOID            shift and go to state 6
    CHAR            shift and go to state 7
    INT             shift and go to state 28
    FLOAT           shift and go to state 3
    DOUBLE          shift and go to state 29
    SHORT           shift and go to state 8
    LONG            shift and go to state 10
    SIGNED          shift and go to state 31
    UNSIGNED        shift and go to state 17
    CONST           shift and go to state 4
    VOLATILE        shift and go to state 32


    storage_class_specifier shift and go to state 1
    type_specifier  shift and go to state 15
    declaration_specifiers shift and go to state 34
    type_qualifier  shift and go to state 30

state 2

    (28) storage_class_specifier -> TREB_PAROUT .

    ID              reduce using rule 28 (storage_class_specifier -> TREB_PAROUT .)
    LPAREN          reduce using rule 28 (storage_class_specifier -> TREB_PAROUT .)
    ASTERISK        reduce using rule 28 (storage_class_specifier -> TREB_PAROUT .)
    TYPEDEF         reduce using rule 28 (storage_class_specifier -> TREB_PAROUT .)
    EXTERN          reduce using rule 28 (storage_class_specifier -> TREB_PAROUT .)
    STATIC          reduce using rule 28 (storage_class_specifier -> TREB_PAROUT .)
    AUTO            reduce using rule 28 (storage_class_specifier -> TREB_PAROUT .)
    REGISTER        reduce using rule 28 (storage_class_specifier -> TREB_PAROUT .)
    TREB_PAROUT     reduce using rule 28 (storage_class_specifier -> TREB_PAROUT .)
    VOID            reduce using rule 28 (storage_class_specifier -> TREB_PAROUT .)
    CHAR            reduce using rule 28 (storage_class_specifier -> TREB_PAROUT .)
    INT             reduce using rule 28 (storage_class_specifier -> TREB_PAROUT .)
    FLOAT           reduce using rule 28 (storage_class_specifier -> TREB_PAROUT .)
    DOUBLE          reduce using rule 28 (storage_class_specifier -> TREB_PAROUT .)
    SHORT           reduce using rule 28 (storage_class_specifier -> TREB_PAROUT .)
    LONG            reduce using rule 28 (storage_class_specifier -> TREB_PAROUT .)
    SIGNED          reduce using rule 28 (storage_class_specifier -> TREB_PAROUT .)
    UNSIGNED        reduce using rule 28 (storage_class_specifier -> TREB_PAROUT .)
    CONST           reduce using rule 28 (storage_class_specifier -> TREB_PAROUT .)
    VOLATILE        reduce using rule 28 (storage_class_specifier -> TREB_PAROUT .)
    SEMICOLON       reduce using rule 28 (storage_class_specifier -> TREB_PAROUT .)
    RPAREN          reduce using rule 28 (storage_class_specifier -> TREB_PAROUT .)
    COMMA           reduce using rule 28 (storage_class_specifier -> TREB_PAROUT .)



state 3

    (17) type_specifier -> FLOAT .

    ID              reduce using rule 17 (type_specifier -> FLOAT .)
    LPAREN          reduce using rule 17 (type_specifier -> FLOAT .)
    ASTERISK        reduce using rule 17 (type_specifier -> FLOAT .)
    TYPEDEF         reduce using rule 17 (type_specifier -> FLOAT .)
    EXTERN          reduce using rule 17 (type_specifier -> FLOAT .)
    STATIC          reduce using rule 17 (type_specifier -> FLOAT .)
    AUTO            reduce using rule 17 (type_specifier -> FLOAT .)
    REGISTER        reduce using rule 17 (type_specifier -> FLOAT .)
    TREB_PAROUT     reduce using rule 17 (type_specifier -> FLOAT .)
    VOID            reduce using rule 17 (type_specifier -> FLOAT .)
    CHAR            reduce using rule 17 (type_specifier -> FLOAT .)
    INT             reduce using rule 17 (type_specifier -> FLOAT .)
    FLOAT           reduce using rule 17 (type_specifier -> FLOAT .)
    DOUBLE          reduce using rule 17 (type_specifier -> FLOAT .)
    SHORT           reduce using rule 17 (type_specifier -> FLOAT .)
    LONG            reduce using rule 17 (type_specifier -> FLOAT .)
    SIGNED          reduce using rule 17 (type_specifier -> FLOAT .)
    UNSIGNED        reduce using rule 17 (type_specifier -> FLOAT .)
    CONST           reduce using rule 17 (type_specifier -> FLOAT .)
    VOLATILE        reduce using rule 17 (type_specifier -> FLOAT .)
    SEMICOLON       reduce using rule 17 (type_specifier -> FLOAT .)
    RPAREN          reduce using rule 17 (type_specifier -> FLOAT .)
    COMMA           reduce using rule 17 (type_specifier -> FLOAT .)



state 4

    (29) type_qualifier -> CONST .

    ID              reduce using rule 29 (type_qualifier -> CONST .)
    LPAREN          reduce using rule 29 (type_qualifier -> CONST .)
    ASTERISK        reduce using rule 29 (type_qualifier -> CONST .)
    TYPEDEF         reduce using rule 29 (type_qualifier -> CONST .)
    EXTERN          reduce using rule 29 (type_qualifier -> CONST .)
    STATIC          reduce using rule 29 (type_qualifier -> CONST .)
    AUTO            reduce using rule 29 (type_qualifier -> CONST .)
    REGISTER        reduce using rule 29 (type_qualifier -> CONST .)
    TREB_PAROUT     reduce using rule 29 (type_qualifier -> CONST .)
    VOID            reduce using rule 29 (type_qualifier -> CONST .)
    CHAR            reduce using rule 29 (type_qualifier -> CONST .)
    INT             reduce using rule 29 (type_qualifier -> CONST .)
    FLOAT           reduce using rule 29 (type_qualifier -> CONST .)
    DOUBLE          reduce using rule 29 (type_qualifier -> CONST .)
    SHORT           reduce using rule 29 (type_qualifier -> CONST .)
    LONG            reduce using rule 29 (type_qualifier -> CONST .)
    SIGNED          reduce using rule 29 (type_qualifier -> CONST .)
    UNSIGNED        reduce using rule 29 (type_qualifier -> CONST .)
    CONST           reduce using rule 29 (type_qualifier -> CONST .)
    VOLATILE        reduce using rule 29 (type_qualifier -> CONST .)
    SEMICOLON       reduce using rule 29 (type_qualifier -> CONST .)
    RPAREN          reduce using rule 29 (type_qualifier -> CONST .)
    COMMA           reduce using rule 29 (type_qualifier -> CONST .)



state 5

    (151) direct_declarator -> LPAREN . declarator RPAREN
    (33) declarator -> . direct_declarator
    (34) declarator -> . pointer declarator
    (148) direct_declarator -> . ID
    (149) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (150) direct_declarator -> . direct_declarator LPAREN RPAREN
    (151) direct_declarator -> . LPAREN declarator RPAREN
    (152) direct_declarator -> . direct_declarator LBRACKET constant_expression RBRACKET
    (153) direct_declarator -> . direct_declarator LBRACKET RBRACKET
    (35) pointer -> . ASTERISK
    (36) pointer -> . ASTERISK type_qualifier_list
    (37) pointer -> . ASTERISK pointer
    (38) pointer -> . ASTERISK type_qualifier_list pointer

    ID              shift and go to state 26
    LPAREN          shift and go to state 5
    ASTERISK        shift and go to state 23

  ! ASTERISK        [ shift and go to state 23 ]
  ! ASTERISK        [ shift and go to state 23 ]
  ! ASTERISK        [ shift and go to state 23 ]

    direct_declarator shift and go to state 22
    declarator      shift and go to state 35
    pointer         shift and go to state 12

state 6

    (14) type_specifier -> VOID .

    ID              reduce using rule 14 (type_specifier -> VOID .)
    LPAREN          reduce using rule 14 (type_specifier -> VOID .)
    ASTERISK        reduce using rule 14 (type_specifier -> VOID .)
    TYPEDEF         reduce using rule 14 (type_specifier -> VOID .)
    EXTERN          reduce using rule 14 (type_specifier -> VOID .)
    STATIC          reduce using rule 14 (type_specifier -> VOID .)
    AUTO            reduce using rule 14 (type_specifier -> VOID .)
    REGISTER        reduce using rule 14 (type_specifier -> VOID .)
    TREB_PAROUT     reduce using rule 14 (type_specifier -> VOID .)
    VOID            reduce using rule 14 (type_specifier -> VOID .)
    CHAR            reduce using rule 14 (type_specifier -> VOID .)
    INT             reduce using rule 14 (type_specifier -> VOID .)
    FLOAT           reduce using rule 14 (type_specifier -> VOID .)
    DOUBLE          reduce using rule 14 (type_specifier -> VOID .)
    SHORT           reduce using rule 14 (type_specifier -> VOID .)
    LONG            reduce using rule 14 (type_specifier -> VOID .)
    SIGNED          reduce using rule 14 (type_specifier -> VOID .)
    UNSIGNED        reduce using rule 14 (type_specifier -> VOID .)
    CONST           reduce using rule 14 (type_specifier -> VOID .)
    VOLATILE        reduce using rule 14 (type_specifier -> VOID .)
    SEMICOLON       reduce using rule 14 (type_specifier -> VOID .)
    RPAREN          reduce using rule 14 (type_specifier -> VOID .)
    COMMA           reduce using rule 14 (type_specifier -> VOID .)



state 7

    (15) type_specifier -> CHAR .

    ID              reduce using rule 15 (type_specifier -> CHAR .)
    LPAREN          reduce using rule 15 (type_specifier -> CHAR .)
    ASTERISK        reduce using rule 15 (type_specifier -> CHAR .)
    TYPEDEF         reduce using rule 15 (type_specifier -> CHAR .)
    EXTERN          reduce using rule 15 (type_specifier -> CHAR .)
    STATIC          reduce using rule 15 (type_specifier -> CHAR .)
    AUTO            reduce using rule 15 (type_specifier -> CHAR .)
    REGISTER        reduce using rule 15 (type_specifier -> CHAR .)
    TREB_PAROUT     reduce using rule 15 (type_specifier -> CHAR .)
    VOID            reduce using rule 15 (type_specifier -> CHAR .)
    CHAR            reduce using rule 15 (type_specifier -> CHAR .)
    INT             reduce using rule 15 (type_specifier -> CHAR .)
    FLOAT           reduce using rule 15 (type_specifier -> CHAR .)
    DOUBLE          reduce using rule 15 (type_specifier -> CHAR .)
    SHORT           reduce using rule 15 (type_specifier -> CHAR .)
    LONG            reduce using rule 15 (type_specifier -> CHAR .)
    SIGNED          reduce using rule 15 (type_specifier -> CHAR .)
    UNSIGNED        reduce using rule 15 (type_specifier -> CHAR .)
    CONST           reduce using rule 15 (type_specifier -> CHAR .)
    VOLATILE        reduce using rule 15 (type_specifier -> CHAR .)
    SEMICOLON       reduce using rule 15 (type_specifier -> CHAR .)
    RPAREN          reduce using rule 15 (type_specifier -> CHAR .)
    COMMA           reduce using rule 15 (type_specifier -> CHAR .)



state 8

    (19) type_specifier -> SHORT .
